--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -6,6 +6,7 @@ repositories {
         url = 'https://repo.dairy.foundation/releases'
     }
     maven { url = "https://mymaven.bylazar.com/releases" }
+    maven { url ="https://ai.smart-cluster.org/reposilite/releases" }
 }
 
 dependencies {
@@ -23,5 +24,7 @@ dependencies {
     implementation "com.acmerobotics.roadrunner:actions:1.0.0"
     implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
     implementation "com.bylazar:fullpanels:1.0.6"
+
+    implementation "com.smartcluster:oracleftc:2.2.5"
 }
 
