--- a/FtcRobotController/build.gradle
+++ b/FtcRobotController/build.gradle
@@ -21,10 +21,11 @@ android {
     compileSdkVersion 36
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     namespace = 'com.qualcomm.ftcrobotcontroller'
+    buildToolsVersion '35.0.0'
 }
 
 apply from: '../build.dependencies.gradle'
